# bytesstr

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  serde.rs
